src/components/Nav/ExpandingMenuButton/MenuLink.less
@import '../../../mixins';

@normalBackgroundColor: #f3f5f5;
@unsolvedBackgroundColor: #ffe9cc;
@unsolvedBorderColor: #b26d14;
@offset: 4.5rem;
@iconWidth: 2rem;

.applyIcon(@color, @url) {
    background: @color;

    &:before {
        content: url(@url);
        width: @iconWidth;
        height: 100%;
        margin: 0 (@offset - @iconWidth) 0 -@offset;
    }
}

li.MenuLink {
    outline: none;

    &:hover > a,
    &:focus > a {
        .applyIcon(#f3f5f5, './img/Ikon_hover_aktiv.svg');
    }

    &.normal > a.active {
        .applyIcon(#e7e9e9, './img/Ikon_hover_aktiv.svg');
    }

    &.unsolved:focus > a,
    &.unsolved:hover > a {
        .applyIcon(@unsolvedBackgroundColor, './img/Ikon_oppgave.svg');
    }

    &.unsolved > a {
        .applyIcon(#f3f5f5, './img/Ikon_oppgave_hollow.svg');
        &.active {
            background: @unsolvedBackgroundColor;
            box-shadow: inset 1px 0 0 1px @unsolvedBorderColor;
            .applyIcon(@unsolvedBackgroundColor, './img/Ikon_oppgave.svg');
        }
    }

    &.solved > a {
        .applyIcon(#cde7d8, './img/Ikon_oppgave_løst.svg');
    }

    .typo-normal {
        @firstChildPercentage: 50%;
        display: flex;
        align-items: center;

        &:first-child {
            width: @firstChildPercentage;
            color: #59514b;
        }

        &:last-child {
            font-weight: 600;
            width: 100% - @firstChildPercentage;
        }
    }

    > a {
        color: #3e3832;
        display: flex;
        align-items: center;
        justify-content: space-between;
        height: 2rem;
        padding: 0 1.5rem 0 @offset;
        border-radius: 0.25rem 0 0 0.25rem;
        text-decoration: none;
        cursor: pointer;
        overflow: hidden;
        outline: none;
    }
}

